added marketPlace ,Farm JUnit tests
Signed-off-by: Pratikrocks <pratikrocks.dey11@gmail.com>