@@ -7,7 +7,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.List;
+import java.util.Arrays;
 
 @SpringBootTest
 class FarmRepositoryTest {
@@ -17,11 +17,14 @@ class FarmRepositoryTest {
     @Autowired
     private FruitRepository fruitRepository;
 
+    @Autowired
+    private CustomersRepository customersRepository;
+
     @Test
     public void addFruit() {
-        Farm farm1 = Farm.builder().farmName("Sam Garden").farmLocation("NYC").build();
-        Farm farm2 = Farm.builder().farmName("Rock Farm").farmLocation("Seattle").build();
-        Fruit fruit = Fruit.builder().fruitName("Mango").fruitType(FruitType.MEDIUM).farms(List.of(new Farm[]{farm1, farm2})).build();
+        Farm farm1 = Farm.builder().farmName("Sam Garden-Green").farmLocation("NYC").build();
+        Farm farm2 = Farm.builder().farmName("Rock Farm Grey").farmLocation("Seattle").build();
+        Fruit fruit = Fruit.builder().fruitName("Guava").fruitType(FruitType.MEDIUM).farms(Arrays.asList(new Farm[]{farm1, farm2})).build();
 
         fruitRepository.save(fruit);
     }
@@ -30,5 +33,19 @@ class FarmRepositoryTest {
     public void getFruit() {
         Fruit fruit = fruitRepository.findById(1L).get();
         System.out.println(fruit);
+
+        System.out.println(fruitRepository.findAll());
+    }
+
+    @Test
+    public void addFruitInFarm() {
+//        Fruit fruit1 = Fruit.builder().fruitName("Litchi").fruitType(FruitType.MEDIUM).build();
+//        Fruit fruit2 = Fruit.builder().fruitName("Pineapple").fruitType(FruitType.MEDIUM).build();
+//
+//        Farm farm1 = Farm.builder().farmName("Sam Garden-Green").farmLocation("NYC-CF").fruits(Arrays.asList(new Fruit[]{fruit1, fruit2})).build();
+//
+//        farmRepository.save(farm1);
+
+        System.out.println(farmRepository.findById(1L).get());
     }
 }
